syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.leoferamos.grpc.notification";
option java_outer_classname = "NotificationProto";
option go_package = "github.com/leoferamos/grpc-real-time-order-platform/notification-service/proto";

package notification;

message OrderUpdate {
  string order_id = 1;
  string status = 2; // CREATED, PAYMENT_APPROVED, DRIVER_ASSIGNED, DRIVER_ON_ROUTE, DELIVERED
  string message = 3;
  int64 timestamp = 4;
}

message SubscribeRequest {
  string user_id = 1;
  string order_id = 2;
}

message NotificationMessage {
  string notification_id = 1;
  string order_id = 2;
  string title = 3;
  string body = 4;
  int64 timestamp = 5;
}

service NotificationService {
  rpc StreamOrderUpdates(SubscribeRequest) returns (stream OrderUpdate);
  
  rpc SendNotification(NotificationMessage) returns (NotificationMessage);
}
